# fraud-v2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_DRAFT.md  pull_request_template.md
.github/workflows/: ci.yml
docs/: blockers-and-vague-decisions.md  data-strategy.md  dependency-map.md  issue-evaluation-ranking.md  kumo-secret-sauce.md  llm-synthetic-data-lab.md  local-production-profile.md  plan-index.md  presentation-cockpit-and-gap-plan.md  production-readiness.md  setup.md  solution-tradeoffs.md  spec-plan.md  target-goal-gap-and-issue-spec.md  vagueness-register.md
factory/: README.md  dashboard.md
factory/runs/: RR-20260504-001.md  RR-20260504-002.md  RR-20260505-001.md  RR-20260505-002.md  RR-20260505-003.md  RR-20260505-004.md  RR-20260505-005.md  RR-20260505-006.md  RR-20260505-007.md  RR-20260505-008.md  RR-20260505-009.md  RR-20260505-010.md  RR-20260505-011.md  RR-20260505-012.md  RR-20260505-013.md  RR-20260505-014.md  RR-20260505-015.md  RR-20260505-016.md  RR-20260505-017.md  RR-20260505-018.md  RR-20260505-019.md  RR-20260505-020.md  RR-20260505-021.md  RR-20260505-022.md  RR-20260505-023.md  RR-20260505-024.md  RR-20260505-025.md  RR-20260505-026.md  RR-20260505-027.md  RR-20260505-028.md  RR-20260505-029.md  RR-20260505-030.md  RR-20260505-031.md  RR-20260505-032.md  RR-20260505-033.md  RR-20260505-034.md  RR-20260505-035.md  RR-20260505-036.md  (+11 more)
infra/: docker-compose.yml  prometheus-alerts.yml  prometheus.yml
scripts/: clean-local.ps1  dev.ps1  full-smoke.ps1  github-handoff.ps1  local-stream-service.ps1  postgres-backup-rehearsal.ps1  test.ps1  verify.ps1
startup/: PROMPT.md
(+184 files in other folders)
