[project]
name = "fraud-v2"
version = "0.33.0"
description = "Local-first fraud decision platform MVP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "prometheus-client>=0.20.0",
  "networkx>=3.3",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "joblib>=1.4.0",
  "python-json-logger>=2.0.7",
  "PyJWT[crypto]>=2.10.0",
]

[project.optional-dependencies]
llm = ["openai>=1.99.0", "jsonschema>=4.23.0"]
infra = [
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "neo4j>=5.25.0",
  "confluent-kafka>=2.6.0",
]
graph-ml = ["torch>=2.4.0", "torch-geometric>=2.5.0"]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[project.scripts]
fraud-v2 = "fraud_v2.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud_v2"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
packages = ["fraud_v2"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "joblib.*", "pandas.*", "networkx.*", "prometheus_client.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
